rendering index.ejs page so it shows up on web browser

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,8 @@
     <title>After Club Recipes</title>
 </head>
 <body>
-    <h1>Welcome to the 'After the Club Deliciously Devious Recipes!'</h1>
-    <p>An app for creating, reading, updating, and deleting your favorite after-club-recipes!</p>
-    
+    <h1>Welcome to the 'After-the-Club Deliciously, Devious Recipes!'</h1>
+    <h3>An app for creating, reading, updating, and deleting your favorite after-the-club-recipes</p>
+
 </body>
 </html>
