building a form on new.ejs

--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -8,7 +8,11 @@
 <body>
     <h1>Add A New Recipe!</h1>
 
-    <!-- START TO BUILD A FORM HERE BELOW -->
-     
+    <!-- STARTING TO BUILD A FORM HERE BELOW -->
+     <form action="/recipes" method="POST">
+        <label for="name">Name:</label>
+        <input type="text" name="name" id="name" />
+     </form>
+
 </body>
 </html>
