--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -9,6 +9,7 @@
     <h1>Add A New Recipe!</h1>
 
     <!-- STARTING TO BUILD A FORM HERE BELOW -->
+     <!-- ! Start here when resume coding this app / this is where I left off -->
      <form action="/recipes" method="POST">
         <label for="name">Name:</label>
         <input type="text" name="name" id="name" />
