--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -1,3 +1,6 @@
+<!-- CRUD OPERATIONS - CREATE PORTION HERE - 
+ Implementing here the ability to add new entries to your database. -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
