adding notes to create page of CRUD operations on new.ejs

--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -1,5 +1,6 @@
 <!-- CRUD OPERATIONS - CREATE PORTION HERE - 
- Implementing here the ability to add new entries to your database. -->
+ Implementing here the ability to add new entries to your database. 
+ * Creating a new recipes page where people can add new recipes for the database. -->
 
 <!DOCTYPE html>
 <html lang="en">
