what i need to add in create form - sections taken from schema of recipes.js

--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -21,3 +21,15 @@
 
 </body>
 </html>
+
+
+
+<!-- What I need to add in form above:
+ name: { type: String, required: true, unique: true},
+    category: {type: String, required: true}, //categories like snacks, appetizers, salads, soups, main dishes, desserts, vegan, full-on junk food.
+    description: { type: String, required: false},
+    ingredients: { type: String, required: true},
+    instructions: { type: String, required: true},
+    isFavoriteRecipe: { type: Boolean, default: false}, //so can create favorite recipes page of favs go-to
+    isDelicious: { type: Boolean, default: false},
+});-->
