--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -16,6 +16,9 @@
      <form action="/recipes" method="POST">
         <label for="name">Name:</label>
         <input type="text" name="name" id="name" />
+
+        <label for="category">Category:</label>
+        <input type="text">
      </form>
 
 </body>
