--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -17,8 +17,49 @@
         <label for="name">Name:</label>
         <input type="text" name="name" id="name" />
 
+        <br>
+        <br>
+
         <label for="category">Category:</label>
         <input type="text">
+
+        <br>
+        <br>
+
+        <label for="description">Description:</label>
+
+        <br>
+        <br>
+
+        <label for="ingredients">Ingredients:</label>
+
+        <br>
+        <br>
+
+
+        <label for="instructions">Instructions:</label>
+
+        <br>
+        <br>
+
+        <label for="isFavoriteRecipe">Is this one of your favorite recipes? If yes, click button:</label>
+        <input type="checkbox" name="isFavoriteRecipe" id="isFavoriteRecipe">
+
+        <br>
+        <br>
+
+        <label for="isDelicious">Is Delicious?</label>
+
+        <br>
+        <br>
+
+        <input type="checkbox" name="isDelicious" id="isDelicious">
+
+        <br>
+        <br>
+
+        <button type="submit">Add Recipe</button>
+
      </form>
 
 </body>
