--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -20,24 +20,27 @@
         <br>
         <br>
 
-        <label for="category">Category:</label>
-        <input type="text">
+        <!-- For this category area, maybe make it a dropdown menu with 7 areas to select from (e.g. italian, snack, main dish, etc) -->
+        <label for="category">Category:</label> 
+        <input type="text" name="category" id="category">
 
         <br>
         <br>
 
         <label for="description">Description:</label>
+        <input type="text" name="description" id="description">
 
         <br>
         <br>
 
         <label for="ingredients">Ingredients:</label>
+        <input type="text" name="ingredients" id="ingredients">
 
         <br>
         <br>
-
 
         <label for="instructions">Instructions:</label>
+        <input type="text" name="instructions" id="instructions">
 
         <br>
         <br>
