adding dropdown menu to html forms

--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -22,7 +22,15 @@
 
         <!-- For this category area, maybe make it a dropdown menu with 7 areas to select from (e.g. italian, snack, main dish, etc) -->
         <label for="category">Category:</label> 
-        <input type="text" name="category" id="category">
+        <!-- <input type="text" name="category" id="category"> -->
+         <select name="category" id="category">
+            <option value="blank"></option>
+            <option value="snacks">Snacks</option>
+            <option value="dessert">Dessert</option>
+            <option value="main-dish">Main Dish</option>
+            <option value="other">Other</option>
+        </select>
+    
 
         <br>
         <br>
