--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,9 @@
 <body>
     <h1>Welcome to the 'After-the-Club Deliciously, Devious Recipes!'</h1>
     <h3>An app for creating, reading, updating, and deleting your favorite after-the-club-recipes</p>
+    <a href="/recipes">Browse Recipes</a> &nbsp;
+    <a href="/recipes/new">Add New Recipe</a>
+
 
 </body>
 </html>
