--- a/views/recipes/index-pg-all-recipes.ejs
+++ b/views/recipes/index-pg-all-recipes.ejs
@@ -1,7 +1,7 @@
 <!-- INDEX PAGE FOR ALL FRUITS -->
- <!-- Index page to display all fruits. -->
-  There are 2 routes associated with this page. 
-  One route to handle the html, and one to handle the form.
+<!-- Index page to display all fruits. -->
+<!-- There are 2 routes associated with this page. 
+One route to handle the html, and one to handle the form. -->
 
 <!DOCTYPE html>
 <html lang="en">
