adding a href links to navigate through diff webpages and using back links

--- a/views/recipes/index-pg-all-recipes.ejs
+++ b/views/recipes/index-pg-all-recipes.ejs
@@ -18,5 +18,9 @@ One route to handle the html, and one to handle the form. -->
         <% }); %>
     </ul>
 
+    <a href="/recipes/new">Back to Add New Recipe</a> &nbsp;
+    <br>
+    <a href="/">Back to Homepage</a>
+
 </body>
 </html>
