--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -71,7 +71,14 @@
 
         <button type="submit">Add Recipe</button>
 
-     </form>
+    </form>
+
+    <br>
+    <br>
+
+    <a href="/recipes/">Back to Recipes</a> &nbsp;
+    <br>
+    <a href="/">Back to Homepage</a>
 
 </body>
 </html>
