--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <title>After Club Recipes</title>
 </head>
 <body>
-    <h1>Welcome to the 'After-the-Club Deliciously, Devious Recipes!'</h1>
+    <h1>Welcome to the <br> After-the-Club-Deliciously-Devious-Recipes!</h1>
     <h3>An app for creating, reading, updating, and deleting your favorite after-the-club-recipes</p>
     <a href="/recipes">Browse Recipes</a> &nbsp;
     <a href="/recipes/new">Add New Recipe</a>
