adding notes about dynamic routing in express

--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- <h1>Here Is Your Recipe!</h1> -->
-    <h1><%= recipe.name %></h1> <!-- Display recipe name -->
+    <h1><%= recipe.name %></h1> <!-- Display recipe name - dynamic routing in Express -->
     <!-- Add more details about the recipe here -->
   </body>
 </html>
