adding notes for myself to explain routing of everything

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,8 @@
 <body>
     <h1>Welcome to the <br> After-the-Club-Deliciously-Devious-Recipes!</h1>
     <h3>An app for creating, reading, updating, and deleting your favorite after-the-club-recipes</p>
+   
+    <!-- /recipes is a link to our GET ROUTE for that list of all recipes page -->
     <a href="/recipes">Browse Recipes</a> &nbsp;
     <a href="/recipes/new">Add New Recipe</a>
 
