addtl notes explaining routing & how all interconnects

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,10 @@
     <h1>Welcome to the <br> After-the-Club-Deliciously-Devious-Recipes!</h1>
     <h3>An app for creating, reading, updating, and deleting your favorite after-the-club-recipes</p>
    
-    <!-- /recipes is a link to our GET ROUTE for that list of all recipes page -->
+    <!-- /recipes is a link to our GET REQUEST ROUTE for that list of all recipes page -->
     <a href="/recipes">Browse Recipes</a> &nbsp;
+
+    <!-- /recipes/new is a link to our GET REQUEST ROUTE (because on an anchor tag)   -->
     <a href="/recipes/new">Add New Recipe</a>
 
 
