adding spacing for addtl readability

--- a/views/recipes/index-pg-all-recipes.ejs
+++ b/views/recipes/index-pg-all-recipes.ejs
@@ -1,3 +1,5 @@
+<!-- CRUD OPERATIONS - PART OF READ PORTION HERE -->
+ 
 <!-- INDEX PAGE FOR ALL FRUITS -->
 <!-- Index page to display all fruits. -->
 <!-- There are 2 routes associated with this page. 
@@ -27,6 +29,6 @@ One route to handle the html, and one to handle the form. -->
     <br>
     <a href="/">Back to Homepage</a>
 
-    
+
 </body>
 </html>
