adding addtl spacing & notes

--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -1,4 +1,4 @@
-<!-- SHOWPAGE FOR EACH RECIPE -->
+<!-- SHOWPAGE FOR EACH RECIPE with dynamic routing -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -52,7 +52,7 @@
         <p>😐 You didn’t mark this as delicious.</p>
     <% } %>
 
-    
+
     <!-- Navigation -->
     <br>
     <a href="/recipes">← Back to All Recipes</a>
