--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -54,9 +54,20 @@
 
 
     <!-- Navigation -->
+
+    <!-- new delete button -->
+    <form action="/recipes/<%=recipe._id%>?_method=DELETE" method="POST">
+      <button type="submit">Delete <%= recipe.name %></button>
+    </form>
+
     <br>
+
     <a href="/recipes">← Back to All Recipes</a>
 
   </body>
 </html>
+
+
+
+
 
