--- a/views/recipes/edit.ejs
+++ b/views/recipes/edit.ejs
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
 <body>
     <h1>Edit <%= recipe.name %></h1>
     <form action="/recipes" method="POST">
@@ -62,3 +71,6 @@
         <a href="/">Back to Homepage</a>
 
 </body>
+</html>
+
+
