adding metadata title and changed button type to update recipe

--- a/views/recipes/edit.ejs
+++ b/views/recipes/edit.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Edit Recipe</title>
 </head>
 
 <body>
@@ -60,7 +60,7 @@
             <br>
             <br>
 
-            <button type="submit">Add Recipe</button>
+            <button type="submit">Update Recipe</button>
 
         </form>
 
