--- a/views/recipes/edit.ejs
+++ b/views/recipes/edit.ejs
@@ -11,7 +11,7 @@
     <h1>Edit <%= recipe.name %></h1>
     <form action="/recipes/<%=recipe._id%>?_method=PUT" method="POST">
             <label for="name">Name:</label>
-            <input type="text" name="name" id="name" />
+            <input type="text" name="name" value="<%= recipe.name %>" />
 
             <br>
             <br>
