adding checked info into checkboxes but still need to make it more dynamic

--- a/views/recipes/edit.ejs
+++ b/views/recipes/edit.ejs
@@ -49,13 +49,14 @@
             <br>
 
             <label for="isFavoriteRecipe">Is this one of your favorite recipes? If yes, click button:</label>
-            <input type="checkbox" name="isFavoriteRecipe" id="isFavoriteRecipe">
-
+            <input type="checkbox" name="isFavoriteRecipe" id="isFavoriteRecipe" checked>
+            <!-- ! Need to make this more dynamic so that it is conditional with what is in the database -->
             <br>
             <br>
 
             <label for="isDelicious">Is Delicious?</label>
-            <input type="checkbox" name="isDelicious" id="isDelicious">
+            <input type="checkbox" name="isDelicious" id="isDelicious" checked>
+            <!-- ! Need to make this more dynamic so that it is conditional with what is in the database -->
 
             <br>
             <br>
