showing where I can commence for next session

--- a/views/recipes/edit.ejs
+++ b/views/recipes/edit.ejs
@@ -50,7 +50,8 @@
 
             <label for="isFavoriteRecipe">Is this one of your favorite recipes? If yes, click button:</label>
             <input type="checkbox" name="isFavoriteRecipe" id="isFavoriteRecipe" checked>
-            <!-- ! Need to make this more dynamic so that it is conditional with what is in the database -->
+            <!-- ! Need to make this more dynamic with ejs icecream cone thing so that it is conditional with what is in the database -->
+            <!-- if (condition) { %>checked<% } etc etc etc -->
             <br>
             <br>
 
