adding notes for changing up PUT form

--- a/views/recipes/edit.ejs
+++ b/views/recipes/edit.ejs
@@ -52,6 +52,9 @@
             <input type="checkbox" name="isFavoriteRecipe" id="isFavoriteRecipe" checked>
             <!-- ! Need to make this more dynamic with ejs icecream cone thing so that it is conditional with what is in the database -->
             <!-- if (condition) { %>checked<% } etc etc etc -->
+            // also from slack chat this from fruits lesson: 
+            // <input type="checkbox" name="isReadyToEat" <%- fruit.isReadyToEat ? 'checked' : '' %>>
+            
             <br>
             <br>
 
