adding notes on ternary statements in ejs

--- a/views/recipes/edit.ejs
+++ b/views/recipes/edit.ejs
@@ -54,6 +54,7 @@
             <!-- if (condition) { %>checked<% } etc etc etc -->
             // also from slack chat this from fruits lesson: 
             // <input type="checkbox" name="isReadyToEat" <%- fruit.isReadyToEat ? 'checked' : '' %>>
+            // above is a ternary statement in ejs
             
             <br>
             <br>
