adding to line 34 edit.ejs

--- a/views/recipes/edit.ejs
+++ b/views/recipes/edit.ejs
@@ -31,7 +31,7 @@
             <br>
 
             <label for="description">Description:</label>
-            <input type="text" name="description" id="description">
+            <input type="text" name="description" id="description" value="<%= description.name %>" />
 
             <br>
             <br>
@@ -55,7 +55,7 @@
             // also from slack chat this from fruits lesson: 
             // <input type="checkbox" name="isReadyToEat" <%- fruit.isReadyToEat ? 'checked' : '' %>>
             // above is a ternary statement in ejs
-            
+
             <br>
             <br>
 
