adding notes for stopping point before I resume tomorrow

--- a/views/recipes/edit.ejs
+++ b/views/recipes/edit.ejs
@@ -32,6 +32,7 @@
 
             <label for="description">Description:</label>
             <input type="text" name="description" id="description" value="<%= description.name %>" />
+            <!-- ! just adding value= for each and changing out the label name -->
 
             <br>
             <br>
